Commit Mallory Cashin's code for Github Pages

--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@ height: auto;
       <i class="fa fa-child w3-xxlarge"></i>
       <p>EVENTS</p>
     </a>
+     <a href="links.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+      <i class="fa fa-plus-square w3-xxlarge" ></i>
+      <p>OTHER</p>
+    </a>
   </nav>
 
 <!-- Navbar on small screens (Hidden on medium and large screens) -->
@@ -86,7 +90,7 @@ height: auto;
     <a href="menu.html" class="w3-bar-item w3-button" style="width:10%">MENU</a>
     <a href="menu.html" class="w3-bar-item w3-button" style="width:10%">PARTIES</a>
     <a href="events.html" class="w3-bar-item w3-button" style="width:10%">EVENTS</a>
-
+    <a href="links.html" class="w3-bar-item w3-button" style="width:10%">OTHER</a>
   </div>
 </div>
 
