--- a/photos.html
+++ b/photos.html
@@ -73,6 +73,10 @@
       <i class="fa fa-child w3-xxlarge"></i>
       <p>EVENTS</p>
     </a>
+     <a href="links.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+     <i class="fa fa-plus-square w3-xxlarge"></i>
+      <p>OTHER</p>
+    </a>
 	</nav>
 
 	<!-- Navbar on small screens (Hidden on medium and large screens) -->
@@ -85,12 +89,12 @@
 			<a href="menu.html" class="w3-bar-item w3-button" style="width:10%">MENU</a>
 			<a href="menu.html" class="w3-bar-item w3-button" style="width:10%">PARTIES</a>
       		<a href="events.html" class="w3-bar-item w3-button" style="width:10%">EVENTS</a>
-
+			<a href="links.html" class="w3-bar-item w3-button" style="width:10%">OTHER</a>
 		</div>
 	</div>
 
 	<div class="w3-padding-64 w3-content" id="photos">
-		<h2 class="w3-text-light-grey">Join The Fun!</h2>
+		<h2 class="w3-text-white">Join The Fun!</h2>
 		<hr style="width:200px" class="w3-opacity">
 
 		<!-- Grid for photos -->
